<resources>
    <string name="app_name">ParseStore</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>

    <string name="item_name">Item Name</string>
    <string name="order">Order</string>
    <string name="price_label">Price Label</string>
    <string name="size">Size</string>

    <string-array name="sizes">
        <item>Select Size</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>


    <string name="title_activity_shipping_view">ShippingView</string>

    <string name="us_address_only">US mailing address only</string>
    <string name="postalCode">Postal Code</string>
    <string name="city_state">City, State</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="checkout">Checkout</string>
    <string name="title_activity_checkout">Checkout</string>

    <string name="card_info_prompt">Enter your credit card information</string>

    <string name="addPayment">Add Payment Method</string>
    <string name="paymentMethods">Payment Methods</string>

    <string name="endingIn">Card ending in </string>
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="validationErrors">Validation Errors</string>

    <string name="cardNumber">Card Number</string>
    <string name="save">Save</string>
    <string name="cvc">CVC</string>
    <string name="credit_card">1234 5678 9012 3456</string>
    <string name="date_hint">MM/DD</string>
    <string name="zip_code">ZIP</string>

    <string name="ok">OK</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
