<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.parse.parsestore.ShippingView">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="left"
        android:background="@color/secondary_text"
        android:backgroundTint="@android:color/white"
        android:backgroundTintMode="src_atop"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.parse.ParseImageView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:id="@+id/productImage"
                android:src="@drawable/tshirt"
                android:layout_gravity="left" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/priceLabel"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:text="@string/price_label"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textStyle="bold"
                android:paddingRight="15dp"
                android:layout_weight="0.22" />

            <TextView
                android:textSize="20sp"
                android:text="@string/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/productName"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingBottom="5dp"/>

            <TextView
                android:textSize="20sp"
                android:text="@string/size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/size"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3" />


</RelativeLayout>
